fixed some dark mode bugs

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ a[target="_blank"]:after {
     position: sticky;
     top: 0;
     z-index: 100;
-    background-color: var(--cream);
+    background-color: var(--bg-color);
     border: var(--grid-border) solid var(--fg-color);
     border-left: none;
     border-right: none;
@@ -255,7 +255,7 @@ a[target="_blank"]:after {
 .navbar ul a:hover,
 .navbar ul a:focus,
 .navbar ul .active {
-    background-color: var(--accent-color);
+    background-color: var(--fg-color);
     color: var(--bg-color);
 }
 
@@ -414,6 +414,13 @@ a[target="_blank"]:after {
     max-width: 100%;
     padding: 40px;
     text-align: center;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+    .supporter-item,
+    .mediapartner-item {
+        background-color: var(--warm-grey);
+    }
 }
 
 .supporter-item + .supporter-item,
